--- a/retroideal/templates/index.html
+++ b/retroideal/templates/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Load Another HTML</title>
+    <title>Retroideal</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
 </head>
-<body>
-  <iframe src="https://d3baz1fr4rwp0i.cloudfront.net" style="width:100%; height:100vh; border:none;"></iframe>
+<body class="index">
+    <div class="animated-bg"></div>
+    <div class="content">
+        <h1>Welcome to Retroideal</h1>
+        <!-- Your other content here -->
+    </div>
+    <a href="/login"> <!-- Change href to "/login" -->
+        <button class="login-button">Login</button>
+    </a>
 </body>
 </html>
