--- a/retroideal/templates/main.html
+++ b/retroideal/templates/main.html
@@ -30,13 +30,52 @@
         <h1>Vehicles</h1>
         <div id="sidePanelContent"></div>
     </div>
-    <div class="content">
-        <!-- Display images -->
+    <div class="content" id="contentArea">
+        <div id="UploadComponent">
+            <h2>Upload Your Images and Request Verification</h2>
+            <form id="uploadForm" enctype="multipart/form-data">
+              <input type="file" id="fileInput" accept="image/*" />
+              <button type="button" id="uploadBtn" onclick="uploadFile()">Upload</button>
+            </form>
+          </div>
         <div id="imageGallery">
-            {% for image_url in image_urls %}
-                <img src="{{ image_url }}" alt="Vehicle Image" class="gallery-image">
-            {% endfor %}
+            <div id="imageGallery">
+                <table>
+                    <thead>
+                      <tr>
+                        <th style="width: 30%;">Image</th>
+                        <th style="width: 30%;">Status</th>
+                        <th style="width: 10%;">Actions</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {% for item in pending_vehicle_image_data %}
+                      <tr>
+                        <td>
+                          <div class="image-container">
+                            <img src="{{ item['image-url'] }}" alt="Vehicle Image" class="gallery-image">
+                          </div>
+                        </td>
+                        <td>{{ item['status'] }}</td>
+                        <td>
+                          <div class="image-buttons">
+                            <button onclick="verifyImage('{{ item['image-url'] }}')">Verify</button>
+                            <button onclick="deleteImage('{{ item['image-id'] }}')">Delete</button>
+                          </div>
+                        </td>
+                      </tr>
+                      {% endfor %}
+                      {% if pending_vehicle_image_data|length == 0 %}
+                      <tr>
+                        <td colspan="4" class="empty-data">No data available</td>
+                      </tr>
+                      {% endif %}
+                    </tbody>
+                  </table>
+            </div>
+            
         </div>
+        
     </div>
     
     <div class="footer">
